--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar">
-  		<a href="Home.html">Home</a>
+  		<a href="index.html">Home</a>
   		<a href="About.html">About</a>
   		<a href="History.html">History</a>
   		<a href="Contact.html">Contact</a>
